Update for major revision

--- a/SensitivityAnalysis/PredictivePolicing/police_regression.ipynb
+++ b/SensitivityAnalysis/PredictivePolicing/police_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "4                  26151.208333              15.248750        24  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -232,8 +232,8 @@
       "Dep. Variable:     max_increase_unfairness_rln   R-squared:                       0.738\n",
       "Model:                                     OLS   Adj. R-squared:                  0.722\n",
       "Method:                          Least Squares   F-statistic:                     46.09\n",
-      "Date:                         Mon, 22 Jan 2024   Prob (F-statistic):           2.08e-26\n",
-      "Time:                                 14:24:08   Log-Likelihood:                 254.98\n",
+      "Date:                         Fri, 02 Aug 2024   Prob (F-statistic):           2.08e-26\n",
+      "Time:                                 13:35:41   Log-Likelihood:                 254.98\n",
       "No. Observations:                          105   AIC:                            -496.0\n",
       "Df Residuals:                               98   BIC:                            -477.4\n",
       "Df Model:                                    6                                         \n",
@@ -266,12 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the anova table\n",
     "table = sm.stats.anova_lm(lm, typ=2)\n",
+    "table['eta_sq'] = table['sum_sq'] / table['sum_sq'].sum()\n",
     "# remove residuals\n",
     "table = table.iloc[:-1]\n",
     "# get the ranking of the features based on sum of squares of anova table\n",
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -308,6 +309,7 @@
        "      <th>df</th>\n",
        "      <th>F</th>\n",
        "      <th>PR(&gt;F)</th>\n",
+       "      <th>eta_sq</th>\n",
        "      <th>sum_sq_rank</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -318,6 +320,7 @@
        "      <td>1.0</td>\n",
        "      <td>17.392052</td>\n",
        "      <td>6.573900e-05</td>\n",
+       "      <td>0.046437</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -326,6 +329,7 @@
        "      <td>1.0</td>\n",
        "      <td>258.118097</td>\n",
        "      <td>3.276745e-29</td>\n",
+       "      <td>0.689176</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -334,6 +338,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.110810</td>\n",
        "      <td>7.399347e-01</td>\n",
+       "      <td>0.000296</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -342,6 +347,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.658269</td>\n",
        "      <td>4.191380e-01</td>\n",
+       "      <td>0.001758</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -350,6 +356,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.061797</td>\n",
        "      <td>8.041978e-01</td>\n",
+       "      <td>0.000165</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -358,6 +365,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.190372</td>\n",
        "      <td>6.635671e-01</td>\n",
+       "      <td>0.000508</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -373,16 +381,24 @@
        "scale(hot_spot_discover_rate):scale(hot_spot_ef...  0.000030  1.0    0.061797   \n",
        "scale(non_hot_spot_discover_rate):scale(hot_spo...  0.000093  1.0    0.190372   \n",
        "\n",
-       "                                                          PR(>F)  sum_sq_rank  \n",
-       "scale(hot_spot_discover_rate)                       6.573900e-05          2.0  \n",
-       "scale(non_hot_spot_discover_rate)                   3.276745e-29          1.0  \n",
-       "scale(hot_spot_effect_size)                         7.399347e-01          5.0  \n",
-       "scale(hot_spot_discover_rate):scale(non_hot_spo...  4.191380e-01          3.0  \n",
-       "scale(hot_spot_discover_rate):scale(hot_spot_ef...  8.041978e-01          6.0  \n",
-       "scale(non_hot_spot_discover_rate):scale(hot_spo...  6.635671e-01          4.0  "
+       "                                                          PR(>F)    eta_sq  \\\n",
+       "scale(hot_spot_discover_rate)                       6.573900e-05  0.046437   \n",
+       "scale(non_hot_spot_discover_rate)                   3.276745e-29  0.689176   \n",
+       "scale(hot_spot_effect_size)                         7.399347e-01  0.000296   \n",
+       "scale(hot_spot_discover_rate):scale(non_hot_spo...  4.191380e-01  0.001758   \n",
+       "scale(hot_spot_discover_rate):scale(hot_spot_ef...  8.041978e-01  0.000165   \n",
+       "scale(non_hot_spot_discover_rate):scale(hot_spo...  6.635671e-01  0.000508   \n",
+       "\n",
+       "                                                    sum_sq_rank  \n",
+       "scale(hot_spot_discover_rate)                               2.0  \n",
+       "scale(non_hot_spot_discover_rate)                           1.0  \n",
+       "scale(hot_spot_effect_size)                                 5.0  \n",
+       "scale(hot_spot_discover_rate):scale(non_hot_spo...          3.0  \n",
+       "scale(hot_spot_discover_rate):scale(hot_spot_ef...          6.0  \n",
+       "scale(non_hot_spot_discover_rate):scale(hot_spo...          4.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
