Update for major revision

--- a/SensitivityAnalysis/OpioidRisk/opioid_risk_regression.ipynb
+++ b/SensitivityAnalysis/OpioidRisk/opioid_risk_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,12 +313,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the anova table\n",
     "table = sm.stats.anova_lm(lm, typ=2)\n",
+    "table['eta_sq'] = table['sum_sq'] / table['sum_sq'].sum()\n",
     "# remove residuals\n",
     "table = table.iloc[:-1]\n",
     "# get the ranking of the features based on sum of squares of anova table\n",
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,10 +346,10 @@
        "  <th>Method:</th>                   <td>Least Squares</td>        <th>  F-statistic:       </th> <td>   1191.</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>                   <td>Wed, 24 Jan 2024</td>       <th>  Prob (F-statistic):</th> <td>3.04e-152</td>\n",
+       "  <th>Date:</th>                   <td>Fri, 02 Aug 2024</td>       <th>  Prob (F-statistic):</th> <td>3.04e-152</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                       <td>20:08:13</td>           <th>  Log-Likelihood:    </th> <td>  1059.7</td> \n",
+       "  <th>Time:</th>                       <td>13:34:45</td>           <th>  Log-Likelihood:    </th> <td>  1059.7</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>            <td>   168</td>            <th>  AIC:               </th> <td>  -2069.</td> \n",
@@ -466,8 +467,8 @@
        "Dep. Variable:     max_increase_unfairness_risk   R-squared:                       0.995\n",
        "Model:                                      OLS   Adj. R-squared:                  0.994\n",
        "Method:                           Least Squares   F-statistic:                     1191.\n",
-       "Date:                          Wed, 24 Jan 2024   Prob (F-statistic):          3.04e-152\n",
-       "Time:                                  20:08:13   Log-Likelihood:                 1059.7\n",
+       "Date:                          Fri, 02 Aug 2024   Prob (F-statistic):          3.04e-152\n",
+       "Time:                                  13:34:45   Log-Likelihood:                 1059.7\n",
        "No. Observations:                           168   AIC:                            -2069.\n",
        "Df Residuals:                               143   BIC:                            -1991.\n",
        "Df Model:                                    24                                         \n",
@@ -512,7 +513,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -551,6 +552,7 @@
        "      <th>df</th>\n",
        "      <th>F</th>\n",
        "      <th>PR(&gt;F)</th>\n",
+       "      <th>eta_sq</th>\n",
        "      <th>sum_sq_rank</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -561,6 +563,7 @@
        "      <td>1.0</td>\n",
        "      <td>27815.790271</td>\n",
        "      <td>1.011751e-165</td>\n",
+       "      <td>0.967987</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -569,6 +572,7 @@
        "      <td>3.0</td>\n",
        "      <td>57.234102</td>\n",
        "      <td>2.288067e-24</td>\n",
+       "      <td>0.005975</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -577,6 +581,7 @@
        "      <td>2.0</td>\n",
        "      <td>83.718449</td>\n",
        "      <td>8.519875e-25</td>\n",
+       "      <td>0.005827</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -585,6 +590,7 @@
        "      <td>3.0</td>\n",
        "      <td>28.075811</td>\n",
        "      <td>2.460103e-14</td>\n",
+       "      <td>0.002931</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -593,6 +599,7 @@
        "      <td>2.0</td>\n",
        "      <td>137.654204</td>\n",
        "      <td>4.672186e-34</td>\n",
+       "      <td>0.009581</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -601,6 +608,7 @@
        "      <td>6.0</td>\n",
        "      <td>0.935441</td>\n",
        "      <td>4.716381e-01</td>\n",
+       "      <td>0.000195</td>\n",
        "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -609,6 +617,7 @@
        "      <td>1.0</td>\n",
        "      <td>24.120703</td>\n",
        "      <td>2.440331e-06</td>\n",
+       "      <td>0.000839</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -617,6 +626,7 @@
        "      <td>1.0</td>\n",
        "      <td>41.370098</td>\n",
        "      <td>1.769562e-09</td>\n",
+       "      <td>0.001440</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -625,6 +635,7 @@
        "      <td>3.0</td>\n",
        "      <td>2.243131</td>\n",
        "      <td>8.585063e-02</td>\n",
+       "      <td>0.000234</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -633,6 +644,7 @@
        "      <td>2.0</td>\n",
        "      <td>0.210157</td>\n",
        "      <td>8.107069e-01</td>\n",
+       "      <td>0.000015</td>\n",
        "      <td>10.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -652,20 +664,20 @@
        "scale(threshold):n_hosp_mode          1.536210e-06  3.0      2.243131   \n",
        "scale(threshold):n_prescription_mode  9.595079e-08  2.0      0.210157   \n",
        "\n",
-       "                                             PR(>F)  sum_sq_rank  \n",
-       "model                                 1.011751e-165          1.0  \n",
-       "n_hosp_mode                            2.288067e-24          3.0  \n",
-       "n_prescription_mode                    8.519875e-25          4.0  \n",
-       "model:n_hosp_mode                      2.460103e-14          5.0  \n",
-       "model:n_prescription_mode              4.672186e-34          2.0  \n",
-       "n_hosp_mode:n_prescription_mode        4.716381e-01          9.0  \n",
-       "scale(threshold)                       2.440331e-06          7.0  \n",
-       "model:scale(threshold)                 1.769562e-09          6.0  \n",
-       "scale(threshold):n_hosp_mode           8.585063e-02          8.0  \n",
-       "scale(threshold):n_prescription_mode   8.107069e-01         10.0  "
+       "                                             PR(>F)    eta_sq  sum_sq_rank  \n",
+       "model                                 1.011751e-165  0.967987          1.0  \n",
+       "n_hosp_mode                            2.288067e-24  0.005975          3.0  \n",
+       "n_prescription_mode                    8.519875e-25  0.005827          4.0  \n",
+       "model:n_hosp_mode                      2.460103e-14  0.002931          5.0  \n",
+       "model:n_prescription_mode              4.672186e-34  0.009581          2.0  \n",
+       "n_hosp_mode:n_prescription_mode        4.716381e-01  0.000195          9.0  \n",
+       "scale(threshold)                       2.440331e-06  0.000839          7.0  \n",
+       "model:scale(threshold)                 1.769562e-09  0.001440          6.0  \n",
+       "scale(threshold):n_hosp_mode           8.585063e-02  0.000234          8.0  \n",
+       "scale(threshold):n_prescription_mode   8.107069e-01  0.000015         10.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
