Update for major revision

--- a/SensitivityAnalysis/LoanLending/loan_lending_regression.ipynb
+++ b/SensitivityAnalysis/LoanLending/loan_lending_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "4               29.554804              28.470233       46941.000000         7  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -227,8 +227,8 @@
       "Dep. Variable:     max_increase_unfairness_dp   R-squared:                       0.970\n",
       "Model:                                    OLS   Adj. R-squared:                  0.969\n",
       "Method:                         Least Squares   F-statistic:                     1194.\n",
-      "Date:                        Wed, 24 Jan 2024   Prob (F-statistic):               0.00\n",
-      "Time:                                20:00:56   Log-Likelihood:                 3519.2\n",
+      "Date:                        Fri, 02 Aug 2024   Prob (F-statistic):               0.00\n",
+      "Time:                                13:33:21   Log-Likelihood:                 3519.2\n",
       "No. Observations:                         768   AIC:                            -6996.\n",
       "Df Residuals:                             747   BIC:                            -6899.\n",
       "Df Model:                                  20                                         \n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "Residual                                                   NaN            NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -516,8 +516,8 @@
       "Dep. Variable:     max_increase_unfairness_dp   R-squared:                       0.970\n",
       "Model:                                    OLS   Adj. R-squared:                  0.969\n",
       "Method:                         Least Squares   F-statistic:                     1194.\n",
-      "Date:                        Wed, 24 Jan 2024   Prob (F-statistic):               0.00\n",
-      "Time:                                20:00:56   Log-Likelihood:                 3519.2\n",
+      "Date:                        Fri, 02 Aug 2024   Prob (F-statistic):               0.00\n",
+      "Time:                                13:33:27   Log-Likelihood:                 3519.2\n",
       "No. Observations:                         768   AIC:                            -6996.\n",
       "Df Residuals:                             747   BIC:                            -6899.\n",
       "Df Model:                                  20                                         \n",
@@ -571,12 +571,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the anova table\n",
     "table_stan = sm.stats.anova_lm(lm_stan, typ=2)\n",
+    "table_stan['eta_sq'] = table_stan['sum_sq'] / table_stan['sum_sq'].sum()\n",
     "\n",
     "# remove residuals\n",
     "table_stan = table_stan.iloc[:-1]\n",
@@ -587,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -615,6 +616,7 @@
        "      <th>df</th>\n",
        "      <th>F</th>\n",
        "      <th>PR(&gt;F)</th>\n",
+       "      <th>eta_sq</th>\n",
        "      <th>sum_sq_rank</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -625,6 +627,7 @@
        "      <td>2.0</td>\n",
        "      <td>0.575729</td>\n",
        "      <td>5.625440e-01</td>\n",
+       "      <td>0.000047</td>\n",
        "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -633,6 +636,7 @@
        "      <td>1.0</td>\n",
        "      <td>18852.558661</td>\n",
        "      <td>0.000000e+00</td>\n",
+       "      <td>0.765218</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -641,6 +645,7 @@
        "      <td>2.0</td>\n",
        "      <td>0.564254</td>\n",
        "      <td>5.690265e-01</td>\n",
+       "      <td>0.000046</td>\n",
        "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -649,6 +654,7 @@
        "      <td>1.0</td>\n",
        "      <td>8.865066</td>\n",
        "      <td>3.000796e-03</td>\n",
+       "      <td>0.000360</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -657,6 +663,7 @@
        "      <td>2.0</td>\n",
        "      <td>0.133460</td>\n",
        "      <td>8.750835e-01</td>\n",
+       "      <td>0.000011</td>\n",
        "      <td>14.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -665,6 +672,7 @@
        "      <td>1.0</td>\n",
        "      <td>8.851696</td>\n",
        "      <td>3.022594e-03</td>\n",
+       "      <td>0.000359</td>\n",
        "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -673,6 +681,7 @@
        "      <td>1.0</td>\n",
        "      <td>342.344187</td>\n",
        "      <td>3.305991e-63</td>\n",
+       "      <td>0.013896</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -681,6 +690,7 @@
        "      <td>2.0</td>\n",
        "      <td>0.067506</td>\n",
        "      <td>9.347280e-01</td>\n",
+       "      <td>0.000005</td>\n",
        "      <td>15.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -689,6 +699,7 @@
        "      <td>1.0</td>\n",
        "      <td>342.624398</td>\n",
        "      <td>3.002351e-63</td>\n",
+       "      <td>0.013907</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -697,6 +708,7 @@
        "      <td>1.0</td>\n",
        "      <td>2148.359432</td>\n",
        "      <td>5.876212e-222</td>\n",
+       "      <td>0.087201</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -705,6 +717,7 @@
        "      <td>2.0</td>\n",
        "      <td>0.134625</td>\n",
        "      <td>8.740646e-01</td>\n",
+       "      <td>0.000011</td>\n",
        "      <td>13.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -713,6 +726,7 @@
        "      <td>1.0</td>\n",
        "      <td>2140.405527</td>\n",
        "      <td>1.642577e-221</td>\n",
+       "      <td>0.086878</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -721,6 +735,7 @@
        "      <td>1.0</td>\n",
        "      <td>2.992251</td>\n",
        "      <td>8.407685e-02</td>\n",
+       "      <td>0.000121</td>\n",
        "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -729,6 +744,7 @@
        "      <td>1.0</td>\n",
        "      <td>13.060992</td>\n",
        "      <td>3.217258e-04</td>\n",
+       "      <td>0.000530</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -737,6 +753,7 @@
        "      <td>1.0</td>\n",
        "      <td>26.820454</td>\n",
        "      <td>2.873943e-07</td>\n",
+       "      <td>0.001089</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -778,25 +795,42 @@
        "scale(score_change_repay):scale(utility_default)       13.060992   \n",
        "scale(score_change_default):scale(utility_default)     26.820454   \n",
        "\n",
-       "                                                           PR(>F)  sum_sq_rank  \n",
-       "potential_score_update_mode                          5.625440e-01         11.0  \n",
-       "agent                                                0.000000e+00          1.0  \n",
-       "potential_score_update_mode:agent                    5.690265e-01         12.0  \n",
-       "scale(score_change_repay)                            3.000796e-03          8.0  \n",
-       "scale(score_change_repay):potential_score_updat...   8.750835e-01         14.0  \n",
-       "scale(score_change_repay):agent                      3.022594e-03          9.0  \n",
-       "scale(score_change_default)                          3.305991e-63          5.0  \n",
-       "scale(score_change_default):potential_score_upd...   9.347280e-01         15.0  \n",
-       "scale(score_change_default):agent                    3.002351e-63          4.0  \n",
-       "scale(utility_default)                              5.876212e-222          2.0  \n",
-       "potential_score_update_mode:scale(utility_default)   8.740646e-01         13.0  \n",
-       "agent:scale(utility_default)                        1.642577e-221          3.0  \n",
-       "scale(score_change_repay):scale(score_change_de...   8.407685e-02         10.0  \n",
-       "scale(score_change_repay):scale(utility_default)     3.217258e-04          7.0  \n",
-       "scale(score_change_default):scale(utility_default)   2.873943e-07          6.0  "
+       "                                                           PR(>F)    eta_sq  \\\n",
+       "potential_score_update_mode                          5.625440e-01  0.000047   \n",
+       "agent                                                0.000000e+00  0.765218   \n",
+       "potential_score_update_mode:agent                    5.690265e-01  0.000046   \n",
+       "scale(score_change_repay)                            3.000796e-03  0.000360   \n",
+       "scale(score_change_repay):potential_score_updat...   8.750835e-01  0.000011   \n",
+       "scale(score_change_repay):agent                      3.022594e-03  0.000359   \n",
+       "scale(score_change_default)                          3.305991e-63  0.013896   \n",
+       "scale(score_change_default):potential_score_upd...   9.347280e-01  0.000005   \n",
+       "scale(score_change_default):agent                    3.002351e-63  0.013907   \n",
+       "scale(utility_default)                              5.876212e-222  0.087201   \n",
+       "potential_score_update_mode:scale(utility_default)   8.740646e-01  0.000011   \n",
+       "agent:scale(utility_default)                        1.642577e-221  0.086878   \n",
+       "scale(score_change_repay):scale(score_change_de...   8.407685e-02  0.000121   \n",
+       "scale(score_change_repay):scale(utility_default)     3.217258e-04  0.000530   \n",
+       "scale(score_change_default):scale(utility_default)   2.873943e-07  0.001089   \n",
+       "\n",
+       "                                                    sum_sq_rank  \n",
+       "potential_score_update_mode                                11.0  \n",
+       "agent                                                       1.0  \n",
+       "potential_score_update_mode:agent                          12.0  \n",
+       "scale(score_change_repay)                                   8.0  \n",
+       "scale(score_change_repay):potential_score_updat...         14.0  \n",
+       "scale(score_change_repay):agent                             9.0  \n",
+       "scale(score_change_default)                                 5.0  \n",
+       "scale(score_change_default):potential_score_upd...         15.0  \n",
+       "scale(score_change_default):agent                           4.0  \n",
+       "scale(utility_default)                                      2.0  \n",
+       "potential_score_update_mode:scale(utility_default)         13.0  \n",
+       "agent:scale(utility_default)                                3.0  \n",
+       "scale(score_change_repay):scale(score_change_de...         10.0  \n",
+       "scale(score_change_repay):scale(utility_default)            7.0  \n",
+       "scale(score_change_default):scale(utility_default)          6.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
